Refactor query routing logic and improve error handling.
Introduce better handling for empty routes and invalid inputs during parsing by adding logging and filtering mechanisms. Replace default fallback case with a specific FAIL case to improve clarity in exception handling. Remove unused imports for cleaner code.